[content visibility] Incorrect geometry values inside c-v hidden subtree https://bugs.webkit.org/show_bug.cgi?id=290577 <rdar://problem/148553259>

Reviewed by Antti Koivisto.

1. Add missing force layout calls to offset/client/scroll-width/height functions.
2. Make sure we also layout (skipped) renderers that participated in the last layout but now are dirty.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-089.html:
Change the test so that individual calls always start with dirty renderers.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-hidden-offsetTop-left-width-height-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-hidden-offsetTop-left-width-height.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-089.html.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-hidden-scrollTop-left-width-height-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-hidden-scrollTop-left-width-height.html: Added.
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateLayout):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::offsetWidth):
(WebCore::Element::offsetHeight):
(WebCore::Element::clientWidth):
(WebCore::Element::clientHeight):
(WebCore::Element::scrollWidth):
(WebCore::Element::scrollHeight):

Canonical link: https://commits.webkit.org/293267@main